syntax = "proto3";

package chat;

message Chat {
    string id = 1;
    string name = 2;
}

message ChatMessage {
    string id = 1;
    string message = 2;
}

message GetAllChatsRequest {
    optional string filter_by_id = 1;
}

message GetAllChatsResponse {
    repeated Chat chats = 1;
}

message CreateChatRequest {
    Chat chat = 1;
}

message CreateChatResponse {
    Chat chat = 1;
}

message DeleteChatRequest {
    string id = 1;
}

message DeleteChatResponse {}

message SendChatMessageRequest {
    string chat_id = 1;
    string callback_url = 2;
    ChatMessage message = 3;
}

message SendChatMessageResponse {
    string message = 1;
}

service ChatService {
    rpc GetAllChats (GetAllChatsRequest) returns (GetAllChatsResponse) {}
    rpc CreateChat (CreateChatRequest) returns (CreateChatResponse) {}
    rpc DeleteChat (DeleteChatRequest) returns (DeleteChatResponse) {}
    rpc SendChatMessage (SendChatMessageRequest) returns (SendChatMessageResponse) {}
}